...

            Spacer()

            Text(self.monthYearString)
                .font(.title)
                .fontWeight(.semibold)
                .accessibilityIdentifier("calendar-month-year")

            Spacer()

            Button(action: self.nextMonth) {
                Image(systemName: "chevron.right")
                    .font(.title2)
...
